# extended_spades

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: MultiChompOptimize.action
config/: multi_chomp_params.yaml
configs/: multi_chomp_params.yaml
include/extended_spades/: extended_spades_action_server.hpp  multi_chomp.hpp  multi_chomp_action_server.hpp  multi_chomp_node.hpp
launch/: multi_chomp.launch.py
scripts/: multi_chomp_coordinator.py
src/: extended_spades_action_server.cpp  extended_spades_action_server_main.cpp  multi_chomp.cpp  multi_chomp_action_server.cpp  multi_chomp_action_server_main.cpp
