<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>extended_spades</name>
  <version>0.0.1</version>
  <description>Multi-CHOMP implementation for ROS 2</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend> 
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen3_cmake_module</depend> <!-- Critical for finding Eigen -->
  <depend>Eigen3</depend>
  <depend>opencv2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
